@@ -69,20 +69,24 @@ App.TaskAttemptController = App.BaseController.extend(App.Helpers.DisplayHelper,
 
   loadAdditional: function(attempt) {
     var that = this;
+    var applicationId = App.Helpers.misc.getAppIdFromVertexId(attempt.get('vertexID'));
 
     var dagLoader = this.store.find('dag', attempt.get('dagID'));
     var vertexLoader = this.store.find('vertex', attempt.get('vertexID'));
     var taskLoader = this.store.find('task', attempt.get('taskID'));
+    var appDetailLoader = App.Helpers.misc.loadApp(this.store, applicationId);
 
     var allLoaders = Em.RSVP.hash({
       dag: dagLoader,
       vertex: vertexLoader,
-      task: taskLoader
+      task: taskLoader,
+      appDetail: appDetailLoader
     });
     allLoaders.then(function(results) {
       attempt.set('task', results.task);
       attempt.set('task.vertex', results.vertex);
       attempt.set('task.vertex.dag', results.dag);
+      attempt.set('appDetail', results.appDetail);
     }).finally(function() {
       that.set('loading', false);
     });
